tests/ui/extern_type_generic.stderr
error: extern type with generic type parameter is not supported yet
 --> tests/ui/extern_type_generic.rs:4:22
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         type Generic<T>;
  |                      ^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
